--- a/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/MainWindow.xaml
@@ -7,8 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="500" Width="900">
     <Window.Resources>
-        <KasseApparat:ShoppingList x:Key="ShopList" />
-		<KasseApparat:ProductList x:Key="ProdList" />
+        <local:ProductList x:Key="ProductList" />
+        <local:ShoppingList x:Key="ShoppingList" />
     </Window.Resources>
 	
 	<Grid>
@@ -18,9 +18,11 @@
             <ColumnDefinition Width="289*"></ColumnDefinition>
             <ColumnDefinition Width="262*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Column="0" x:Name="Products" Header="Produkter" Margin="10,10,10.2,10.4" BorderThickness="2"/>
+        <GroupBox Grid.Column="0" DataContext="{StaticResource ProductList}" x:Name="Products" 
+                  Header="Produkter" Margin="10,10,10.2,10.4" BorderThickness="2"/>
 
-        <GroupBox Grid.Column="1" x:Name="Sale" Header="Salg" Margin="9.8,10,8,10.4" BorderThickness="2">
+        <GroupBox Grid.Column="1" DataContext="{StaticResource ShoppingList}" x:Name="Sale" 
+                  Header="Salg" Margin="9.8,10,8,10.4" BorderThickness="2">
             <Grid Margin="0,0,0.4,0.2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="11*"/>
@@ -38,10 +40,13 @@
                 <Label Content="Ant." Grid.Row="0" Grid.Column="0"/>
                 <Label Content="Vare" Grid.Row="0" Grid.Column="1"/>
                 <Label Content="Pris" Grid.Row="0" Grid.Column="2"/>
-                
-                <ListBox Grid.Row="1" Grid.Column="0" Margin="5,3,0,0"/>
-                <ListBox Grid.Row="1" Grid.Column="1" Margin="-1,3,0,0"/>
-                <ListBox Grid.Row="1" Grid.Column="2" Margin="-1,3,5,0"/>
+
+                <ListBox Grid.Row="1" Grid.Column="0" Margin="5,3,0,0" 
+                         ItemsSource="{Binding}" DisplayMemberPath="Amount"/>
+                <ListBox Grid.Row="1" Grid.Column="1" Margin="-1,3,0,0" 
+                         ItemsSource="{Binding}" DisplayMemberPath="Name"/>
+                <ListBox Grid.Row="1" Grid.Column="2" Margin="-1,3,5,0"
+                         ItemsSource="{Binding}" DisplayMemberPath="Price"/>
                 <Label Content="Total" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Margin="0,0,5,0"/>
                 <ListBox Grid.Row="2" Grid.Column="2" Margin="-1,-1,5,0"/>
             </Grid>
@@ -79,7 +84,7 @@
                 <Button x:Name="ButtonZero" Content="0" Grid.Row="4" Grid.Column="0" Margin="7,7,6.6,7" FontSize="20"/>
                 <Button x:Name="ButtonOneDZero" Content="00" Grid.Row="4" Grid.Column="1" Margin="7.4,7,7,7" FontSize="20"/>
                 <Button x:Name="ButtonClear" Content="Clear" Grid.Row="4" Grid.Column="2" Margin="7,7,6.6,7" FontSize="20"/>
-                <Button x:Name="ButtonCash" Content="Kontant" Grid.Row="6" Grid.Column="0" Margin="7,7,6.6,7"/>
+                <Button x:Name="ButtonCash" Content="Kontant" Grid.Row="6" Grid.Column="0" Margin="7,7,6.6,7" Click="ButtonCash_Click"/>
                 <Button x:Name="ButtonCard" Content="Kort" Grid.Row="6" Grid.Column="1" Margin="7.4,7,7,7"/>
                 <Button x:Name="ButtonAnulate" Grid.Row="6" Grid.Column="2" Margin="7,7,6.6,7">
                     <TextBlock TextAlignment="Center"><Run Text="Annuller"/><LineBreak/><Run Text="køb"/></TextBlock>
