--- a/Backend/MainWindow.xaml
+++ b/Backend/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Backend"
         mc:Ignorable="d"
-        Title="Administrationssystem" Height="800" Width="1500" WindowState="Maximized" Background="#FFF0F0F0">
+        Title="Administrationssystem - Hovedmenu" Height="800" Width="1500" WindowState="Maximized" Background="#FFF0F0F0">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -41,7 +41,7 @@
         <!-- Column 2 -->
         <StackPanel Grid.Column="2" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
+            <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Click="CreateProduct"/>
             <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
             <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
             <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10"/>
