--- a/Backend/AddProductWindow.xaml
+++ b/Backend/AddProductWindow.xaml
@@ -27,10 +27,8 @@
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
-            <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
-            <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
-            <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10"/>
+            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Click="SaveProduct"/>
+            <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10"/>
         </StackPanel>
     </Grid>
 </Window>
