--- a/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/MainWindow.xaml
@@ -83,8 +83,8 @@
                         </Button.RenderTransform>
                     </Button>
                     <Button Click="ButtonDownClick" Content="V" Margin="2" Grid.Column="1" FontSize="10"/>
-                    <Button Click="ButtonMoreClick" Content="+" Margin="2" Grid.Column="2" FontSize="10"/>
-                    <Button Click="ButtonLessClick" Content="-" Margin="2" Grid.Column="3" FontSize="10"/>
+                    <RepeatButton Click="ButtonMoreClick" Content="+" Margin="2" Grid.Column="2" FontSize="10"/>
+                    <RepeatButton Click="ButtonLessClick" Content="-" Margin="2" Grid.Column="3" FontSize="10"/>
                     <Button Click="ButtonDeleteClick" Content="Delete" Margin="2" Grid.Column="4" FontSize="10"/>
                 </Grid> 
             </Grid>
