--- a/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/MainWindow.xaml
@@ -59,9 +59,9 @@
                 </ListBox>
 
 
-                <Label Content="Total" Grid.Column="1" Grid.Row="2" HorizontalAlignment="Right" Margin="0,0,5,0"/>
-                <Border Grid.Column="2" Grid.Row="2" Margin="-1,-1,5,0" BorderThickness="1" BorderBrush="DarkGray">
-                    <TextBlock x:Name="TextBlockTotalPrice" Text="{Binding TotalWarePrice}" Margin="5"/>
+                <Label Content="Total" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,5,0"/>
+                <Border Grid.Column="1" Grid.Row="1" Margin="-1,-1,10,0" BorderThickness="1" BorderBrush="DarkGray">
+                    <TextBlock x:Name="TextBlockTotalPrice" Text="{Binding TotalPrice}" Margin="5"/>
                 </Border>
 
                 <Grid Margin="5" Grid.Row="3" Grid.ColumnSpan="2">
