--- a/Backend/Backend/AddProductWindow.xaml
+++ b/Backend/Backend/AddProductWindow.xaml
@@ -28,7 +28,7 @@
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
             <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Click="SaveProduct"/>
-            <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10"/>
+            <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10" Click="Annuller"/>
         </StackPanel>
     </Grid>
 </Window>
