--- a/Backend/Backend/MainWindow.xaml
+++ b/Backend/Backend/MainWindow.xaml
@@ -44,7 +44,7 @@
             <Button Content="_Opret produkt" FontSize="10pt" Height="40" Margin="0, 10" Click="CreateProduct"/>
             <Button Content="_Rediger produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
             <Button Content="_Slet produkt" FontSize="10pt" Height="40" Margin="0, 10"/>
-            <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10"/>
+            <Button Content="_Luk administrationssystem" FontSize="10pt" Height="40" Margin="0, 10" Click="CloseMainWindowClick"/>
         </StackPanel>
 
         <!-- Row 2 -->
