--- a/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/MainWindow.xaml
@@ -156,7 +156,7 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <Button Click="ButtonUpClick" Content="V" Margin="2" Grid.Column="0" FontSize="10" RenderTransformOrigin="0.5,0.5">
+                    <Button x:Name="Up" Command="{Binding PrevCommand}" Content="V" Margin="2" Grid.Column="0" FontSize="10" RenderTransformOrigin="0.5,0.5">
                         <Button.RenderTransform>
                             <TransformGroup>
                                 <ScaleTransform/>
@@ -166,10 +166,10 @@
                             </TransformGroup>
                         </Button.RenderTransform>
                     </Button>
-                    <Button Click="ButtonDownClick" Content="V" Margin="2" Grid.Column="1" FontSize="10"/>
+                    <Button x:Name="Down" Command="{Binding NextCommand}" Content="V" Margin="2" Grid.Column="1" FontSize="10"/>
                     <RepeatButton Command="{Binding MoreCommand}" Content="+" Margin="2" Grid.Column="2" FontSize="10"/>
                     <RepeatButton Command="{Binding LessCommand}" Content="-" Margin="2" Grid.Column="3" FontSize="10"/>
-                    <Button Click="ButtonDeleteClick" Content="Delete" Margin="2" Grid.Column="4" FontSize="10"/>
+                    <Button x:Name="Delete" Command="{Binding DeleteCommand}" Content="Delete" Margin="2" Grid.Column="4" FontSize="10"/>
                 </Grid>
             </Grid>
         </GroupBox>
