--- a/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/MainWindow.xaml
@@ -61,7 +61,8 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Row="0" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton1">
+                            x:Name="ProductButton1"
+                            Command="{Binding Button1Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -77,7 +78,8 @@
                     </Button>
                     <Button Grid.Row="0" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton2">
+                            x:Name="ProductButton2"
+                            Command="{Binding Button2Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -92,7 +94,8 @@
                     </Button>
                     <Button Grid.Row="0" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton3">
+                            x:Name="ProductButton3"
+                            Command="{Binding Button3Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -107,7 +110,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton4">
+                            x:Name="ProductButton4"
+                            Command="{Binding Button4Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -122,7 +126,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton5">
+                            x:Name="ProductButton5"
+                            Command="{Binding Button5Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -138,7 +143,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton6">
+                            x:Name="ProductButton6"
+                            Command="{Binding Button6Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -153,7 +159,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton7">
+                            x:Name="ProductButton7"
+                            Command="{Binding Button7Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -168,7 +175,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton8">
+                            x:Name="ProductButton8"
+                            Command="{Binding Button8Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -183,7 +191,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton9">
+                            x:Name="ProductButton9"
+                            Command="{Binding Button9Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -198,7 +207,8 @@
                     </Button>
                     <Button Grid.Row="3" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton10">
+                            x:Name="ProductButton10"
+                            Command="{Binding Button10Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -213,7 +223,8 @@
                     </Button>
                     <Button Grid.Row="3" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton11">
+                            x:Name="ProductButton11"
+                            Command="{Binding Button11Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -228,7 +239,8 @@
                     </Button>
                     <Button Grid.Row="3" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton12">
+                            x:Name="ProductButton12"
+                            Command="{Binding Button12Command}">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
