--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -61,8 +61,8 @@
                     </Grid.ColumnDefinitions>
                     <Button Grid.Row="0" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton1"
-                            Command="{Binding Button1Command}">
+                            x:Name="ProductButton01"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -78,8 +78,8 @@
                     </Button>
                     <Button Grid.Row="0" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton2"
-                            Command="{Binding Button2Command}">
+                            x:Name="ProductButton02"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -94,8 +94,8 @@
                     </Button>
                     <Button Grid.Row="0" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton3"
-                            Command="{Binding Button3Command}">
+                            x:Name="ProductButton03"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -110,8 +110,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton4"
-                            Command="{Binding Button4Command}">
+                            x:Name="ProductButton04"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -126,8 +126,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton5"
-                            Command="{Binding Button5Command}">
+                            x:Name="ProductButton05"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -143,8 +143,8 @@
                     </Button>
                     <Button Grid.Row="1" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton6"
-                            Command="{Binding Button6Command}">
+                            x:Name="ProductButton06"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -159,8 +159,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="0"
                             Margin="5"
-                            x:Name="ProductButton7"
-                            Command="{Binding Button7Command}">
+                            x:Name="ProductButton07"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -175,8 +175,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="1"
                             Margin="5"
-                            x:Name="ProductButton8"
-                            Command="{Binding Button8Command}">
+                            x:Name="ProductButton08"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -191,8 +191,8 @@
                     </Button>
                     <Button Grid.Row="2" Grid.Column="2"
                             Margin="5"
-                            x:Name="ProductButton9"
-                            Command="{Binding Button9Command}">
+                            x:Name="ProductButton09"
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -208,7 +208,7 @@
                     <Button Grid.Row="3" Grid.Column="0"
                             Margin="5"
                             x:Name="ProductButton10"
-                            Command="{Binding Button10Command}">
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -224,7 +224,7 @@
                     <Button Grid.Row="3" Grid.Column="1"
                             Margin="5"
                             x:Name="ProductButton11"
-                            Command="{Binding Button11Command}">
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
@@ -240,7 +240,7 @@
                     <Button Grid.Row="3" Grid.Column="2"
                             Margin="5"
                             x:Name="ProductButton12"
-                            Command="{Binding Button12Command}">
+                            Click="ButtonProductClick">
                         <Grid >
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="1*"></RowDefinition>
