--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -11,7 +11,7 @@
         <local:ShoppingList x:Key="ShoppingList" />
     </Window.Resources>
 
-    <Grid>
+    <Grid Background="DarkGray">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="343*"></ColumnDefinition>
             <ColumnDefinition Width="289*"></ColumnDefinition>
@@ -263,10 +263,10 @@
                     <Button Grid.Row="0" Grid.Column="0"
                             Margin="5"
                             Content="Previous Page"
-                            Command="{Binding ButtonPrevCommand}"></Button>
+                            Command="{Binding PrevCommand}"></Button>
                     <Button Grid.Row="0" Grid.Column="1"
                             Content="Next Page" Margin="5"
-                            Command="{Binding ButtonNextCommand}"></Button>
+                            Command="{Binding NextCommand}"></Button>
                 </Grid>
             </Grid>
         </GroupBox>
@@ -316,8 +316,11 @@
 
 
                 <Label Content="Total" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,5,0"/>
-                <Border Grid.Column="1" Grid.Row="1" Margin="-1,-1,10,0" BorderThickness="1" BorderBrush="DarkGray">
-                    <TextBlock x:Name="TextBlockTotalPrice" Text="{Binding Path=TotalPrice}"  Margin="5"/>
+                <Border Background="White" Grid.Column="1" Grid.Row="1" Margin="-1,-1,10,0" BorderThickness="1" BorderBrush="DarkGray">
+                    <TextBlock x:Name="TextBlockTotalPrice" 
+                               Text="{Binding Path=TotalPrice}"  
+                               Margin="5"
+                               HorizontalAlignment="R"/>
                 </Border>
 
                 <Grid Margin="5" Grid.Row="3" Grid.ColumnSpan="2">
@@ -362,7 +365,7 @@
                     <RowDefinition Height="30*"/>
                 </Grid.RowDefinitions>
                 <Border Margin="7,7,6.6,6" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" BorderThickness="2" BorderBrush="LightGray">
-                    <TextBlock x:Name="Display"  />
+                    <TextBlock Background="White" x:Name="Display"  />
                 </Border>
                 <Button x:Name="ButtonOne" Content="1" Grid.Row="1" Grid.Column="0" Margin="7,7,6.6,7" FontSize="20"/>
                 <Button x:Name="ButtonTwo" Content="2" Grid.Row="1" Grid.Column="1" Margin="7.4,7,7,7" FontSize="20"/>
