--- a/KasseApparat/KasseApparat/MainWindow.xaml
+++ b/KasseApparat/KasseApparat/MainWindow.xaml
@@ -11,7 +11,7 @@
         <local:ShoppingList x:Key="ShoppingList" />
     </Window.Resources>
 
-    <Grid Background="DarkGray">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="343*"></ColumnDefinition>
             <ColumnDefinition Width="289*"></ColumnDefinition>
@@ -318,9 +318,8 @@
                 <Label Content="Total" Grid.Column="0" Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,5,0"/>
                 <Border Background="White" Grid.Column="1" Grid.Row="1" Margin="-1,-1,10,0" BorderThickness="1" BorderBrush="DarkGray">
                     <TextBlock x:Name="TextBlockTotalPrice" 
-                               Text="{Binding Path=TotalPrice}"  
-                               Margin="5"
-                               HorizontalAlignment="R"/>
+                               Text="{Binding Path=TotalPrice}"  Margin="5"
+                               HorizontalAlignment="Right"/>
                 </Border>
 
                 <Grid Margin="5" Grid.Row="3" Grid.ColumnSpan="2">
