--- a/Backend/Backend/AddProduct/Views/AddProductWindow.xaml
+++ b/Backend/Backend/AddProduct/Views/AddProductWindow.xaml
@@ -16,18 +16,22 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <StackPanel Margin="10" Grid.Row="1">
+        <StackPanel Margin="10" Grid.Row="1" d:DataContext="{d:DesignData }">
             <Label Content="Opret produkt" Padding="0" FontSize="12pt"/>
+            
             <Label Content="Produktnavn"/>
-            <TextBox Name="textboxName" MaxLength="75"/>
+            <TextBox Name="textboxName" MaxLength="75" Text="{Binding Product.BName, UpdateSourceTrigger=PropertyChanged}"/>
+            
             <Label Content="Stregkode"/>
-            <TextBox Name="textboxBarcode" MaxLength="75"/>
+            <TextBox Name="textboxBarcode" MaxLength="75" Text="{Binding Product.BProductNumber, UpdateSourceTrigger=PropertyChanged}"/>
+            
             <Label Content="Pris"/>
-            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20"/>
+            <TextBox Name="textboxPrice" PreviewTextInput="textboxPrice_PreviewTextInput" MaxLength="20" Text="{Binding Product.BPrice, UpdateSourceTrigger=PropertyChanged}"/>
+            
         </StackPanel>
         <StackPanel Grid.Column="1" Grid.Row="1" Margin="10">
             <Label Content="Hovedmenu" Padding="0" FontSize="12pt"/>
-            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Click="SaveProduct"/>
+            <Button Content="_Gem" FontSize="10pt" Height="40" Margin="0, 10" Command="{Binding AddCommand}"/>
             <Button Content="_Annuller" FontSize="10pt" Height="40" Margin="0, 10" Click="Annuller"/>
         </StackPanel>
     </Grid>
